--- a/GWAS.ipynb
+++ b/GWAS.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,28 @@
     "    f_C = # of Cs\n",
     "    f_T = # of T's\n",
     "    18\"\"\"\n",
-    "    if genotype.to_string().count('C')==0 and genotype.to_string().count('T')==0:\n",
-    "        return np.array([genotype.to_string().count('A'),genotype.to_string().count('G')])\n",
-    "    else:\n",
-    "        return np.array([genotype.to_string().count('C'),genotype.to_string().count('T')])\n",
+    "    arr = []\n",
+    "    if genotype.to_string().count('C')!=0:\n",
+    "        arr = np.append(arr, genotype.to_string().count('C'))\n",
+    "    if genotype.to_string().count('T')!=0:\n",
+    "        arr = np.append(arr, genotype.to_string().count('T'))\n",
+    "    if genotype.to_string().count('G')!=0:\n",
+    "        arr = np.append(arr, genotype.to_string().count('G'))\n",
+    "    if genotype.to_string().count('A')!=0:\n",
+    "        arr = np.append(arr, genotype.to_string().count('A'))\n",
+    "    if len(arr)==1:\n",
+    "        arr = np.append(arr,0)\n",
+    "    return arr\n",
     "\n",
     "def getGenotypeCounts (genotype):\n",
-    "    if genotype.to_string().count('C C')==0 and genotype.to_string().count('C T')==0 and genotype.to_string().count('T T')==0:\n",
-    "        return np.array([genotype.to_string().count('A A'),genotype.to_string().count('A G'),genotype.to_string().count('G G')])\n",
-    "    else: \n",
-    "        return np.array([genotype.to_string().count('C C'),genotype.to_string().count('C T'),genotype.to_string().count('T T')])\n",
+    "    if genotype.to_string().count('C C')==0 and genotype.to_string().count('T T')==0:\n",
+    "        return np.array([genotype.to_string().count('A A'),genotype.to_string().count('A G')+genotype.to_string().count('G A'),genotype.to_string().count('G G')])\n",
+    "    elif genotype.to_string().count('G G')==0 and genotype.to_string().count('T T')==0: \n",
+    "        return np.array([genotype.to_string().count('A A'),genotype.to_string().count('A C')+genotype.to_string().count('C A'),genotype.to_string().count('C C')])\n",
+    "    elif genotype.to_string().count('G G')==0 and genotype.to_string().count('A A')==0: \n",
+    "        return np.array([genotype.to_string().count('C C'),genotype.to_string().count('C T')+genotype.to_string().count('T C'),genotype.to_string().count('T T')])\n",
+    "    else:\n",
+    "        return np.array([genotype.to_string().count('T T'),genotype.to_string().count('G T')+genotype.to_string().count('T G'),genotype.to_string().count('G G')])\n",
     "\n",
     "#30 # Compute the Odds Ratio\n",
     "#31 # takes as input a 2X2  confusion matrix\n",
@@ -154,8 +166,8 @@
     "    health = getAlleleCounts(control)\n",
     "    diabetic = getAlleleCounts(disease)\n",
     "\n",
-    "# 49    dis_freq = computeAlleleFrequency(diabetic[0], diabetic[1])\n",
-    "# 50    health_freq =  computeAlleleFrequency(health[0], health[1])\n",
+    "# 59    dis_freq = computeAlleleFrequency(diabetic[0], diabetic[1])\n",
+    "# 60    health_freq =  computeAlleleFrequency(health[0], health[1])\n",
     "\n",
     "    o_r= computeOR(health,diabetic) # odds ratio\n",
     "    \n",
@@ -176,8 +188,9 @@
     "    else:\n",
     "        HWE = HWEChiSq(control_minor, getGenotypeCounts(control))\n",
     "    \n",
-    "    return pd.DataFrame(np.array([minor_allele_con,major_allele_con,minor_allele_dis,major_allele_dis,control_minor,t1_minor,o_r,p,HWE]))\n",
-    "\n",
+    "    result=  pd.DataFrame(np.array([minor_allele_con,major_allele_con,minor_allele_dis,major_allele_dis,control_minor,t1_minor,o_r,p,HWE]))\n",
+    "    return result\n",
+    "    \n",
     "## function to load the data file\n",
     "def loadFile (disease, chrom_num):\n",
     "    ## construct your file name based on the disease and chrom_number\n",
@@ -192,25 +205,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1153 1855]\n",
-      "[1529 2469]\n",
-      "0.9963249409766973\n"
+      "             0\n",
+      "0   887.000000\n",
+      "1  2121.000000\n",
+      "2  1164.000000\n",
+      "3  2834.000000\n",
+      "4     0.294880\n",
+      "5     0.291146\n",
+      "6     0.982133\n",
+      "7     0.951792\n",
+      "8     0.000000\n"
      ]
     }
    ],
    "source": [
-    "health = getAlleleCounts(c1_1)\n",
-    "diabetic = getAlleleCounts(t2d_1)\n",
-    "print(health)\n",
-    "print(diabetic)\n",
-    "print(computeOR(health,diabetic))"
+    "print(get_snp_stats(c1_1,t2d_1))"
    ]
   },
   {
@@ -222,17 +238,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:34: RuntimeWarning: invalid value encountered in long_scalars\n",
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in double_scalars\n",
       "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:31: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:36: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:34: RuntimeWarning: divide by zero encountered in long_scalars\n",
       "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:36: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in double_scalars\n"
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:36: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:46: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:46: RuntimeWarning: divide by zero encountered in double_scalars\n"
      ]
     }
    ],
    "source": [
+    "bigdf = pd.DataFrame()\n",
     "for i in range(22):\n",
     "    i = i+1\n",
     "    t2d = loadFile('T2D',i)\n",
@@ -255,12 +270,24 @@
     "    for j in range(100):\n",
     "        t2d_1 = t2d_snps.loc[j,:]\n",
     "        c1_1 = c1_snps.loc[j,:]\n",
-    "        df.append(get_snp_stats(c1_1,t2d_1))"
+    "        if len(getAlleleCounts(c1_1))<2 or len(getAlleleCounts(t2d_1))<2:\n",
+    "            df=df.append(np.array([0,0,0,0,0,0,0,0,0]))\n",
+    "        df=df.append(get_snp_stats(c1_1,t2d_1).transpose())\n",
+    "    bigdf.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -284,20 +311,40 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3007.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3991.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.999668</td>\n",
+       "      <td>0.998249</td>\n",
+       "      <td>0.189605</td>\n",
+       "      <td>0.574135</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "        0    1       2    3         4         5         6         7    8\n",
+       "0  3007.0  1.0  3991.0  7.0  0.999668  0.998249  0.189605  0.574135  0.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,26 +353,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Odds Ratio:\n"
+      "Odds Ratio:\n",
+      "0.9963249409766973\n",
+      "\n",
+      "Type 2 Diabetes:\n",
+      "0.38244122061030517\n",
+      "0.8141174907213498\n",
+      "0.8154681593364395\n",
+      "0.6175587793896948\n",
+      "\n",
+      "Control:\n",
+      "0.38331117021276595\n",
+      "0.616688829787234\n",
+      "\n",
+      "Chi-Squared:\n",
+      "0.9906428272745443\n",
+      "\n",
+      "HWE:\n",
+      "0.9149630590292988\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "computeOR() missing 1 required positional argument: 'diabetic'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-54-384c84f877e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Odds Ratio:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomputeOR\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mgetAlleleCounts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc1_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgetAlleleCounts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt2d_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nType 2 Diabetes:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomputeAlleleFrequency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetAlleleCounts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt2d_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgetAlleleCounts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt2d_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: computeOR() missing 1 required positional argument: 'diabetic'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1153.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1855.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1529.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2469.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.383311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.382441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.996325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.990643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.914963</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0\n",
+       "0  1153.000000\n",
+       "1  1855.000000\n",
+       "2  1529.000000\n",
+       "3  2469.000000\n",
+       "4     0.383311\n",
+       "5     0.382441\n",
+       "6     0.996325\n",
+       "7     0.990643\n",
+       "8     0.914963"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
